--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
-th, td {
-  width: 33%;
-  border: 1px solid black;
-  padding: .5em;    
-}
-
 table {
   width: 50%;
   border-collapse: collapse;
+}
+th, td {
+  height: 2em;
+  border: 1px solid black;
+}
+td {
+  vertical-align: top;
 }
