learning about new selectors in which you can style input texts

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,7 @@
-table {
-  width: 50%;
-  border-collapse: collapse;
+form {
+  font-family: Arial, sans-serif;
 }
-th, td {
-  height: 2em;
-  border: 1px solid black;
-}
-tr.clicka {
-  background-color: lightgray;
+
+input[type="text"] {
+  font-size: 2em;
 }
