--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 div#header {
-  background-color: #0033cc;
   position: absolute;
+  width: 100%;
   top: 0;
   left: 0;
-  width: 100%;
+  background-color: #990000;
 }
-h1 {
-  color: #ffff00;
-  text-align: center;
-}
+div#header h2 {
+  color: yellow;
+  margin-left: 5%;
+  font-family: Helvetica;
+} 
