Practice pulling elements with negative margins

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,14 @@
-.container {
-  width: 980px;
+body {
+  max-width: 400px;
   margin: 0 auto;
+  padding: 1rem;
+}
+
+p {
+  border: 1px solid black;
+  padding: 1rem;
+}
+
+p:first-child {
+  margin-bottom: -1rem;
 }
