--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,12 @@
-body {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 1rem;
-}
+div {
 
-p {
-  border: 1px solid black;
-  padding: 1rem;
 }
+.introduction {
 
-p:first-child {
-  margin-bottom: -1rem;
+}
+.main-content {
+
+}
+.contact-us {
+  
 }
