Learn about Normal Flow elements

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,16 @@
-div {
-
+body {
+  width: 500px;
+  margin: 0 auto;
 }
-.introduction {
 
+p {
+  background: rgba(255, 84, 104, 0.3);
+  border: 2px solid rgb(255, 84, 104);
+  padding: 10px;
+  margin: 10px;
 }
-.main-content {
 
-}
-.contact-us {
-  
+span {
+  background: white;
+  border: 1px solid black;
 }
