--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,34 @@
 body {
-  max-width: 600px;
-  margin: 0 auto;
+  background: #eee;
+  font-family: sans-serif;
 }
 
-.one {
-  background: pink;
-  border: 3px solid blue;
-  /* CHANGE ME */
-  padding: 32px;
-  margin: 12px;
+.card {
+  width: 400px;
+  background: #fff;
+  margin: 16px auto;
 }
 
-.two {
-  background: lightblue;
-  border: 3px solid purple;
-  /* CHANGE ME */
-  margin-bottom: 48px;
+.title {
+  background: #e3f4ff;
+
+  padding: 7px;
+  margin: 10px;
 }
 
-.three {
-  background: peachpuff;
-  border: 3px solid brown;
-  width: 200px;
-  /* CHANGE ME */
-  padding: 32px;
-  margin-left: auto;
+.content {
+  background: #e3f4ff;
+
+  margin: 10px;
+}
+
+.button-container {
+  background: #e3f4ff;
+
+  margin: 10px;
+}
+
+button {
+  background: white;
+  border: 1px solid #eee;
 }
