--- a/styles.css
+++ b/styles.css
@@ -4,31 +4,43 @@ body {
 }
 
 .card {
-  width: 400px;
+  width: 450px; /* edited */
   background: #fff;
   margin: 16px auto;
+
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
 
-  padding: 7px;
-  margin: 10px;
+  padding: 8px;
+  margin-bottom: 8px;
+  margin-top: 0px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
 
-  margin: 10px;
+  margin-bottom: 8px;
+  font-size: 18px;
+  padding: 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
 
-  margin: 10px;
+  font-size: 18px;
+  text-align: center;
+  padding: 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+
+  display: block;
+  margin: 0 auto 0 auto;
+  padding: 8px 24px;
 }
