--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,10 @@
-body {
-  background: #eee;
-  font-family: sans-serif;
+.flex-container {
+  display: flex;
 }
 
-.card {
-  width: 450px; /* edited */
-  background: #fff;
-  margin: 16px auto;
-
-  padding: 8px;
-}
-
-.title {
-  background: #e3f4ff;
-
-  padding: 8px;
-  margin-bottom: 8px;
-  margin-top: 0px;
-  font-size: 16px;
-}
-
-.content {
-  background: #e3f4ff;
-
-  margin-bottom: 8px;
-  font-size: 18px;
-  padding: 16px 8px;
-}
-
-.button-container {
-  background: #e3f4ff;
-
-  font-size: 18px;
-  text-align: center;
-  padding: 8px;
-}
-
-button {
-  background: white;
-  border: 1px solid #eee;
-
-  display: block;
-  margin: 0 auto 0 auto;
-  padding: 8px 24px;
+.flex-container div {
+  background: peachpuff;
+  border: 4px solid brown;
+  height: 100px;
+  flex: 1;
 }
