--- a/styles.css
+++ b/styles.css
@@ -6,5 +6,10 @@
   background: peachpuff;
   border: 4px solid brown;
   height: 100px;
-  flex: 1;
+  width: 300px;
+  flex: 1 1 0%;
+}
+
+.flex-container .two {
+  flex-shrink: 0;
 }
