--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
 .flex-container {
   display: flex;
+  flex-direction: column;
 }
 
 .flex-container div {
   background: peachpuff;
   border: 4px solid brown;
-  height: 100px;
-  width: 300px;
-  flex: 1 1 0%;
+  height: 80px;
+  flex: 1 1 auto;
 }
 
 .flex-container .two {
-  flex-shrink: 0;
+  flex-grow: 2;
 }
