--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,14 @@
-.flex-container {
+.container {
+  height: 140px;
+  padding: 16px;
+  background: plum;
+  border: 4px solid indigo;
   display: flex;
-  flex-direction: column;
 }
 
-.flex-container div {
-  background: peachpuff;
-  border: 4px solid brown;
-  height: 80px;
-  flex: 1 1 auto;
-}
-
-.flex-container .two {
-  flex-grow: 2;
+.item {
+  width: 60px;
+  height: 60px;
+  border: 4px solid darkslategray;
+  background: skyblue;
 }
