--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@
   background: plum;
   border: 4px solid indigo;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
 }
 
 .item {
