--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,5 @@
-.container {
-  height: 140px;
-  padding: 16px;
-  background: plum;
-  border: 4px solid indigo;
+.box {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1em;
-}
-
-.item {
-  width: 60px;
-  height: 60px;
-  border: 4px solid darkslategray;
-  background: skyblue;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
