Learn about how flex is used with forms

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
-.box {
+.wrapper {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+}
+.wrapper input[type="text"] {
+  flex: 1 1 auto;
 }
