--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,42 @@
-.container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 12.5rem;
-  gap: 1rem;
-  width: 100%;
-  max-width: 37.5rem;
-  padding: 0.5rem;
-  margin: 0 auto;
-  box-sizing: border-box;
-}
-
-@media (max-width: 27em) {
-  .container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-body {
+.navigation {
   display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin: 0;  
-  min-height: 100vh;
-  background: linear-gradient(-45deg, #ff9f4d 10%, #ffc857 0, #ffc857 90%, #ff9f4d 0, #ff9f4d 100%);
+  flex-flow: row wrap;
+  justify-content: flex-end;
+
+  list-style: none;
+  margin: 0;
+  background: deepskyblue;
 }
 
-input[type="range"] {
+.navigation a {
+  text-decoration: none;
   display: block;
-  margin: 2rem auto;
+  padding: 1em;
+  color: white;
 }
 
-.item {
-  border-radius: 15px;
-  background-color: #faf7fa;
-  background-image: linear-gradient(#fdeae3, #fdeae3), linear-gradient(#f8c966,#f8c966), linear-gradient(#f1d6c3,#f1d6c3), linear-gradient(90deg, transparent 20px, #f9e5c7 0, #f9e5c7 calc(100% - 20px), transparent 0);
-  background-size: 100% 50px, 50px 10px, 60px 10px, auto 50px;
-  background-position: 0 0, 20px 80px, 20px 100px, left 0 bottom 20px;
-  background-repeat: no-repeat;
+.navigation a:hover {
+  background: #1565C0;
 }
 
-
-@supports not (gap: 1px) {
-  body {
-    padding-top: 2em;  
+@media all and (max-width: 800px) {
+  .navigation {
+    justify-content: space-around;
   }
-  
-  body::before {    
-    content: "Your browser doesn't support gap property";
-    display: block;
-    color: #e43;
-    font-weight: bold;
-    position: fixed;
-    top: 1.5em;
-    left: 0;
-    right: 0;
-    z-index: 1;
+}
+
+@media all and (max-width: 600px) {
+  .navigation {
+    flex-flow: column wrap;
+    padding: 0;
+  }
+  .navigation a {
     text-align: center;
+    padding: 10px;
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  .navigation li:last-of-type a {
+    border-bottom: none;
   }
 }
