--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,48 @@
-.navigation {
+.wrapper {
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-end;
+  font-weight: bold;
+  text-align: center;
+}
 
-  list-style: none;
-  margin: 0;
+.wrapper > * {
+  padding: 10px;
+  flex: 1 100%;
+}
+
+.header {
+  background: tomato;
+}
+
+.footer {
+  background: lightgreen;
+}
+
+.main {
+  text-align: left;
   background: deepskyblue;
 }
 
-.navigation a {
-  text-decoration: none;
-  display: block;
-  padding: 1em;
-  color: white;
+.aside-1 {
+  background: gold;
 }
 
-.navigation a:hover {
-  background: #1565C0;
+.aside-2 {
+  background: hotpink;
 }
 
-@media all and (max-width: 800px) {
-  .navigation {
-    justify-content: space-around;
-  }
+@media all and (min-width: 600px) {
+  .aside { flex: 1 0 0; }
 }
 
-@media all and (max-width: 600px) {
-  .navigation {
-    flex-flow: column wrap;
-    padding: 0;
-  }
-  .navigation a {
-    text-align: center;
-    padding: 10px;
-    border-top: 1px solid rgba(255, 255, 255, 0.3);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  }
-  .navigation li:last-of-type a {
-    border-bottom: none;
-  }
+@media all and (min-width: 800px) {
+  .main { flex: 3 0px }
+  .aside-1 { order: 1 }
+  .main { order: 2 }
+  .aside-2 { order: 3 }
+  .footer { order: 4 }
+}
+
+body {
+  padding: 2em;
 }
