--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,19 @@
-.wrapper {
+.container {
+  background: dodgerblue;
+  border: 4px solid midnightblue;
+  width: 400px;
+  height: 300px;
+
   display: flex;
-  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.box {
+  background: palevioletred;
   font-weight: bold;
   text-align: center;
-}
-
-.wrapper > * {
-  padding: 10px;
-  flex: 1 100%;
-}
-
-.header {
-  background: tomato;
-}
-
-.footer {
-  background: lightgreen;
-}
-
-.main {
-  text-align: left;
-  background: deepskyblue;
-}
-
-.aside-1 {
-  background: gold;
-}
-
-.aside-2 {
-  background: hotpink;
-}
-
-@media all and (min-width: 600px) {
-  .aside { flex: 1 0 0; }
-}
-
-@media all and (min-width: 800px) {
-  .main { flex: 3 0px }
-  .aside-1 { order: 1 }
-  .main { order: 2 }
-  .aside-2 { order: 3 }
-  .footer { order: 4 }
-}
-
-body {
-  padding: 2em;
+  border: 6px solid maroon;
+  width: 80px;
+  height: 80px;
 }
