--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,45 @@
-.container {
-  background: dodgerblue;
-  border: 4px solid midnightblue;
-  width: 400px;
-  height: 300px;
+.header  {
+  font-family: monospace;
+  background: papayawhip;
 
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
-.box {
-  background: palevioletred;
-  font-weight: bold;
-  text-align: center;
-  border: 6px solid maroon;
-  width: 80px;
-  height: 80px;
+.logo {
+  font-size: 48px;
+  font-weight: 900;
+  color: tomato;
+  background: white;
+  padding: 4px 32px;
+
+  width: fit-content;
+}
+
+ul {
+  /* this removes the dots on the list items*/
+  list-style-type: none;
+}
+
+a {
+  font-size: 22px;
+  background: white;
+  padding: 8px;
+  /* this removes the line under the links */
+  text-decoration: none;
+}
+
+.left-links  ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: auto;
+}
+
+.right-links ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: auto;
 }
