--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 6em;
 }
 
 .logo {
@@ -18,6 +19,8 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+
+  padding: 0;
 }
 
 a {
@@ -29,23 +32,21 @@ a {
 }
 
 .left-links {
-  background-color: gray;
   margin-left: 20px;
+  width: 250px;
 }
 .right-links {
-  background-color: gray;
   margin-right: 20px;
+  width: 250px;
 }
 
 .left-links  ul {
-  background-color: aquamarine;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
 .right-links ul {
-  background-color: aquamarine;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
 }
