--- a/styles.css
+++ b/styles.css
@@ -1,72 +1,26 @@
-/* this is some magical font-importing.  
-you'll learn about it later. */
-@import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
-
 body {
-  margin: 0;
-  background: #eee;
-  font-family: Besley, serif;
+  font-family: 'Courier New', Courier, monospace;
 }
 
-.header {
-  background: white;
-  border-bottom: 1px solid #ddd;
-  box-shadow: 0 0 8px rgba(0,0,0,.1);
-
-  display: flex;
-  justify-content: space-between;
+img {
+  width: 100px;
+  height: 100px;
 }
 
-.profile-image {
-  background: rebeccapurple;
-  box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
-  border-radius: 50%;
-  width: 48px;
-  height:  48px;
-}
-
-.logo {
-  color: rebeccapurple;
-  font-size: 32px;
+.title {
+  font-size: 36px;
   font-weight: 900;
-  font-style: italic;
 }
 
-button {
-  border: none;
-  border-radius: 8px;
-  background: rebeccapurple;
-  color: white;
-  padding: 8px 24px;
-}
-
-a {
-  /* this removes the line under our links */
-  text-decoration: none;
-  color: rebeccapurple;
-}
-
-ul {
-  list-style-type: none;
-}
-
-/* My additions */
-.left {
+/* do not edit this footer */
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 52px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin-left: 1em;
-}
-.right {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  column-gap: 1em;
-  margin-right: 1em;
-}
-
-.left .links {
-  display: flex;
-  justify-content: space-between;
-  column-gap: 1em;
+  justify-content: center;
+  background: #eee;
 }
