Solve 04-flex-information TOP exercise

--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,19 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+
+.container {
+  display: flex;
+  justify-content: center;
+  padding-top: 32px;
+  column-gap: 52px;
+}
+
+.container div {
+  text-align: center;
+}
+
+.container .item {
+  width: 200px;
+}
