--- a/styles.css
+++ b/styles.css
@@ -1,87 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-html, body {
-  height: 100%;
-}
-
 body {
-  font-family: Roboto, sans-serif;
+  height: 100vh;
   margin: 0;
-  background: #aaa;
-  color: #333;
-  /* I'll give you this one for free lol */
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  overflow: hidden;
+  font-family: Roboto, sans-serif;
 }
 
-.modal {
-  background: white;
-  width: 480px;
-  border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
-
-  display: flex;
-  padding: 1em;
-  column-gap: 1em;
-}
-
-.icon {
-  color: royalblue;
-  font-size: 26px;
-  font-weight: 700;
-  background: lavender;
-  width: 42px;
-  height: 42px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.close-button {
-  background: #eee;
-  border-radius: 50%;
-  color: #888;
-  font-weight: 400;
-  font-size: 16px;
-  height: 24px;
-  width: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+img {
+  width: 600px;
 }
 
 button {
-  padding: 8px 16px;
+  font-family: Roboto, sans-serif;
+  border: none;
   border-radius: 8px;
+  background: #eee;
 }
 
-button.continue {
-  background: royalblue;
-  border: 1px solid royalblue;
-  color: white;
-}
-
-button.cancel {
-  background: white;
+input {
   border: 1px solid #ddd;
-  color: royalblue;
+  border-radius: 16px;
+  padding: 8px 24px;
+  width: 400px;
+  margin-bottom: 16px;
 }
 
 /* My Additions */
-.modal .header {
-  font-size: 1.2em;
+.footer {
+  background: #eeeeee;
+  
 }
-
-.modal .heading {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.modal .second {
-  display: flex;
-  flex-direction: column;
-  row-gap: 0.6em;
+.footer ul {
+  list-style-type: none;
+  padding: 0;
 }
