--- a/styles.css
+++ b/styles.css
@@ -1,93 +1,57 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
 body {
-  height: 100vh;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
-  overflow: hidden;
-  font-family: Roboto, sans-serif;
-}
-
-img {
-  width: 600px;
-}
-
-button {
-  font-family: Roboto, sans-serif;
-  border: none;
-  border-radius: 8px;
-  background: #eee;
-}
-
-input {
-  border: 1px solid #ddd;
-  border-radius: 16px;
-  padding: 8px 24px;
-  width: 400px;
-  margin-bottom: 16px;
-}
-
-/* My Additions */
-a {
-  text-decoration: none;
-}
-
-.whole {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .header {
+  height: 72px;
+  background: darkmagenta;
+  color: white;
+}
+
+.footer {
+  height: 72px;
+  background: #eee;
+  color: darkmagenta;
+
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sidebar {
+  width: 300px;
+  background: royalblue;
+}
+
+.card {
+  border: 1px solid #eee;
+  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  border-radius: 4px;
+}
+
+/* My Additions */
+.main {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  padding: 5px 18px;
 }
-.header ul {
-  list-style-type: none;
-  padding: 0;
-}
-.header .left-links {
+
+.header {
+  font-size: 32px;
+  font-weight: 900;
   display: flex;
-  column-gap: 10px;
-}
-.header .right-links {
-  display: flex;
-  column-gap: 10px;
-}
-.header a {
-  color: #888888;
+  align-items: center;
+  padding-left: 16px;
 }
 
 .content {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  row-gap: 1em;
-}
-.content .buttons button {
-  padding: 9px 12px;
 }
 
-.footer {
-  background: #eeeeee;
-  display: flex;
-  justify-content: space-between;
-  padding: 5px 18px;
-}
-.footer ul {
-  list-style-type: none;
-  padding: 0;
-}
-.footer .left-links {
-  display: flex;
-  column-gap: 10px;
-}
-.footer .right-links {
-  display: flex;
-  column-gap: 10px;
-}
-.footer a {
-  color: #888888;
-}
+/* 
+To-do:
+-need to verically stretch middle part
+*/
