--- a/styles.css
+++ b/styles.css
@@ -1,82 +1,24 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0;
-  min-height: 100vh;
+.container {
+  display: flex;
+  height: 100vh;
+
+  gap: 25px;
+
+  align-items: flex-end;
+
+  flex-wrap: wrap;
+  place-content: center flex-end;
 }
 
-.header {
-  height: 72px;
-  background: darkmagenta;
-  color: white;
-}
+[class ^="box-"] {
+  width: 140px;
+  height: 140px;
+  background-color: skyblue;
+  border: 2px solid black;
 
-.footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
+  font-size: 65px;
 
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-.sidebar {
-  width: 300px;
-  background: royalblue;
-
-  min-width: 268px;
-  padding: 16px;
-}
-
-.card {
-  border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
-
-  padding: 15px;
-  width: 250px;
-}
-
-/* My Additions */
-.main {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.header {
-  font-size: 32px;
-  font-weight: 900;
-  display: flex;
-  align-items: center;
-  padding-left: 16px;
-}
-
-.content {
-  display: flex;
-  flex: 1;
-}
-
-.sidebar ul {
-  list-style: none;
-  padding: 0;
-}
-.sidebar a {
-  font-size: 24px;
-  color: white;
-  text-decoration: none;
-}
-
-.cards {
-  padding: 32px;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 1.2em 1.2em;
-}
-
-/* 
-To-do:
--need to verically stretch middle part
-*/
