--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,23 @@
-.container {
-  display: flex;
-  height: 100vh;
-
-  gap: 25px;
-
-  align-items: flex-end;
-
-  flex-wrap: wrap;
-  place-content: center flex-end;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-[class ^="box-"] {
-  width: 140px;
-  height: 140px;
-  background-color: skyblue;
-  border: 2px solid black;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-  font-size: 65px;
-
+.flex-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: #f4f4f4;
+  justify-content: space-evenly;
+}
+
+.item {
+  width: 100px;
+  height: 100px;
+  background: #254de4;
+  color: #fff;
+  margin: 10px;
 }
