--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,19 @@
-input {
-  font-size: 2em;
-  margin: 10px 1px 0;
+html {
+  font-family: sans-serif;
+}
+
+h2 {
+  font-size: 16px;
+}
+
+.a11y-label {
+  margin: 0;
+  text-align: right;
+  font-size: 0.7rem;
+  width: 98%;
+}
+
+body {
+  margin: 10px;
+  background: #f5f9fa;
 }
