Learning touch events

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
-body {
-  min-height: 200px;
+dot {
+  position: absolute;
+  display: block;
+  border: 2px solid red;
+  border-radius: 50px;
+  height: 100px;
+  width: 100px;
 }
