--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
-dot {
-  position: absolute;
-  display: block;
-  border: 2px solid red;
-  border-radius: 50px;
-  height: 100px;
-  width: 100px;
+#progresss {
+  border-bottom: 2px solid blue;
+  width: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
