Learning about Tables

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,3 @@
-.arc text {
-  font: 10px sans-serif;
-  text-anchor: middle;
-}
-
-.arc path {
-  stroke: #fff;
-}
-
-.title {
-  fill: teal;
-  font-weight: bold;
+table, tr, th {
+  border: 1px solid black;
 }
