--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 html {
   font-family: sans-serif;
 }
@@ -14,10 +15,30 @@ td, th {
   padding: 10px 20px;
 }
 
+th {
+  background-color: rgb(235,235,235);
+}
+
 td {
   text-align: center;
 }
 
+tr:nth-child(even) td {
+  background-color: rgb(250,250,250);
+}
+
+tr:nth-child(odd) td {
+  background-color: rgb(245,245,245);
+}
+
 caption {
   padding: 10px;
+}
+
+tbody {
+  font-size: 95%;
+  font-style: italic;
+}
+tfoot {
+  font-weight: bold;
 }
