--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,51 @@
-html {
-  font-family: sans-serif;
+input {
+  display: none;
 }
-
-table {
-  border-collapse: collapse;
-  border: 2px solid rgb(200,200,200);
-  letter-spacing: 1px;
-  font-size: 0.8rem;
+label, ul {
+  border: 1px solid #cecfd5;
+  border-radius: 6px;
 }
-
-td, th {
-  border: 1px solid rgb(190,190,190);
-  padding: 10px 20px;
+label {
+  color: #0087cc;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 18px;
+  padding: 5px 9px;
+  transition: all .15s ease;
 }
-
-th {
-  background-color: rgb(235,235,235);
+label:hover {
+  color: #ff7b29;
 }
-
-td {
-  text-align: center;
+input:checked + label {
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
+  color: #9799a7;
 }
-
-tr:nth-child(even) td {
-  background-color: rgb(250,250,250);
+nav {
+  max-height: 0;
+  overflow: hidden;
+  transition: all .15s ease;
 }
-
-tr:nth-child(odd) td {
-  background-color: rgb(245,245,245);
+input:checked ~ nav {
+  max-height: 500px;
 }
-
-caption {
-  padding: 10px;
+ul {
+  list-style: none;
+  margin: 8px 0 0 0;
+  padding: 0;
+  width: 100px;
+}
+li {
+  border-bottom: 1px solid #cecfd5;
+}
+li:last-child {
+  border-bottom: 0;
+}
+a {
+  color: #0087cc;
+  display: block;
+  padding: 6px 12px;
+  text-decoration: none;
+}
+a:hover {
+  color: #ff7b29;
 }
