--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,18 @@
-.arrow {
-  background: #2db34a;
-  color: #fff;
-  display: inline-block;
-  height: 30px;
-  line-height: 30px;
-  padding: 0 12px;
-  position: relative;
-  text-decoration: none;
+div {
+  font-family: sans-serif;
 }
-.arrow::before, .arrow::after {
-  content: "";
-  height: 0;
-  position: absolute;
-  width: 0;
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 10px;
+  color: white;
+  padding: 10px;
+  font-size: 1.1em;
+  background-color: #e74c3c;
 }
-.arrow::before {
-  border-bottom: 15px solid #2db34a;
-  border-left: 15px solid transparent;
-  border-top: 15px solid #2db34a;
-  left: -15px;
-}
-.arrow::after {
-  border-bottom: 15px solid transparent;
-  border-left: 15px solid #2db34a;
-  border-top: 15px solid transparent;
-  right: -15px;
-}
-.arrow:hover {
-  background: #ff7b29;
-}
-.arrow:hover::before {
-  border-bottom: 15px solid #ff7b29;
-  border-top: 15px solid #ff7b29;
-}
-.arrow:hover::after {
-  border-left: 15px solid #ff7b29;
+.long {
+  padding: 1em;
+  height: 25ch;
+  font-size: 3em;
+  text-transform: uppercase;
 }
