--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,34 @@
-* {
-  box-sizing: border-box;
+:root {
+  --border-btn: 1px solid rgb(36, 36, 36);
+  --color-base-bg: rgb(240, 240, 240);
+  --color-base-text: rgb(18, 18, 18);
+  --color-btn-bg: rgb(220, 220, 220);
+  --theme-name: "light";
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --border-btn: 1px solid rgb(220, 220, 220);
+    --color-base-bg: rgb(18, 18, 18);
+    --color-base-text: rgb(240, 240, 240);
+    --color-btn-bg: rgb(36, 36, 36);
+    --theme-name: "dark";
+  }
 }
 body {
-  font-size: 1.25rem;
-  font-family: system-ui, sans-serif;
+  background-color: var(--color-base-bg);
+  color: var(--color-base-text);
+  padding: 10px;
 }
-main {
-  width: min(60ch, 100vw - 2rem);
-  margin-top: max(8vh, 2rem);
-  margin-right: auto;
-  margin-left: auto;
-}
-h2 {
-  border: min(6px, 0.15em) solid purple;
-  font-size: clamp(1.5rem, 6vw + 1rem, 3rem);
-  padding: max(5%, 1rem);
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 p {
-  line-height: 1.5;
+  font-size: 1.5rem;
 }
-a {
-  color: blue;
+.theme-name::after {
+  content: var(--theme-name);
 }
