--- a/styles.css
+++ b/styles.css
@@ -1,70 +1,47 @@
-:root {
-  --form-control-color: rebeccapurple;
-  --form-control-disabled: #959495;
+form {
+  margin: 0 auto;
+  width: 400px;
+  padding: 1em;
+  border: 1px solid #ccc;
+  border-radius: 1em;
 }
 
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-.form-control {
-  font-family: system-ui, sans-serif;
-  font-size: 2rem;
-  font-weight: bold;
-  line-height: 1.1;
-  display: grid;
-  grid-template-columns: 1em auto;
-  gap: 0.5em;
-}
-
-input[type="checkbox"] {
-  appearance: none;
-  background-color: #fff;
+ul {
+  list-style: none;
+  padding: 0;
   margin: 0;
-  font: inherit;
-  color: currentColor;
-  width: 1.15em;
-  height: 1.15em;
-  border: 0.15em solid currentColor;
-  border-radius: 0.15em;
-  transform: translateY(-0.075em);
-  display: grid;
-  place-content: center;
 }
 
-input[type="checkbox"]::before {
-  content: "";
-  width: 0.65em;
-  height: 0.65em;
-  transform: scale(0);
-  transition: 120ms transform ease-in-out;
-  box-shadow: inset 1em 1em var(--form-control-color);
-  background-color: CanvasText;
-  transform-origin: bottom left;
-  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
-}
-
-.form-control + .form-control {
+form li + li {
   margin-top: 1em;
 }
 
-input[type="checkbox"]:checked::before {
-  transform: scale(1);
+label {
+  display: inline-block;
+  width: 90px;
+  text-align: right;
 }
 
-input[type="checkbox"]:focus {
-  outline: max(2px, 0.15em) solid currentColor;
-  outline-offset: max(2px, 0.15em);
+input, textarea {
+  font: 1em sans-serif;
+  width: 300px;
+  box-sizing: border-box;
+  border: 1px solid #999;
 }
 
-input[type="checkbox"]:disabled {
-  --form-control-color: var(--form-control-disabled);
-
-  color: var(--form-control-disabled);
-  cursor: not-allowed;
+input:focus, textarea:focus {
+  border-color: #000;
 }
 
-.form-control--disabled {
-  color:var(--form-control-disabled);
-  cursor: not-allowed;
+textarea {
+  vertical-align: top;
+  height: 5em;
+}
+
+.button {
+  padding-left: 90px;
+}
+
+button {
+  margin-left: .5em;
 }
