--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,41 @@
+h1 {
+  margin-top: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 form {
   margin: 0 auto;
   width: 400px;
   padding: 1em;
-  border: 1px solid #ccc;
+  border: 1px solid #CCC;
   border-radius: 1em;
 }
 
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-form li + li {
+div+div {
   margin-top: 1em;
 }
 
-label {
+label span {
   display: inline-block;
-  width: 90px;
+  width: 120px;
   text-align: right;
 }
 
 input, textarea {
   font: 1em sans-serif;
-  width: 300px;
+  width: 250px;
   box-sizing: border-box;
   border: 1px solid #999;
+}
+
+input[type=checkbox], input[type=radio] {
+  width: auto;
+  border: none;
 }
 
 input:focus, textarea:focus {
@@ -36,12 +45,20 @@ input:focus, textarea:focus {
 textarea {
   vertical-align: top;
   height: 5em;
+  resize: vertical;
 }
 
-.button {
-  padding-left: 90px;
+fieldset {
+  width: 250px;
+  box-sizing: border-box;
+  margin-left: 136px;
+  border: 1px solid #999;
 }
 
 button {
-  margin-left: .5em;
+  margin: 20px 0 0 124px;
+}
+
+label {
+position: relative;
 }
