--- a/styles.css
+++ b/styles.css
@@ -1,64 +1,45 @@
-h1 {
-  margin-top: 0;
-}
-
-ul {
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  list-style: none;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 form {
   margin: 0 auto;
-  width: 400px;
-  padding: 1em;
-  border: 1px solid #CCC;
-  border-radius: 1em;
+  width: 65%;
 }
+.btn {
+  margin-left: 17.5%;
+  margin-top: 10px;
+  height: 2rem;
+  width: 6rem;
+  font-size: 100%;
+  border-radius: 5px;
+  border-style: none;
 
-div+div {
-  margin-top: 1em;
+  background: linear-gradient(40deg, #e1e1e1, #f2f2f2);
 }
-
-label span {
-  display: inline-block;
-  width: 120px;
-  text-align: right;
+div {
+  display: flex;
+  padding: 1rem 0;
+  justify-content: space-between;
 }
 
 input, textarea {
-  font: 1em sans-serif;
-  width: 250px;
-  box-sizing: border-box;
-  border: 1px solid #999;
+  width: 60%;
+  border-style: none;
+  background-color: #e1e1e1;
+  border-radius: 5px;
 }
 
-input[type=checkbox], input[type=radio] {
-  width: auto;
-  border: none;
-}
-
-input:focus, textarea:focus {
-  border-color: #000;
+input {
+  height: 1.5rem;
 }
 
 textarea {
-  vertical-align: top;
-  height: 5em;
-  resize: vertical;
-}
-
-fieldset {
-  width: 250px;
-  box-sizing: border-box;
-  margin-left: 136px;
-  border: 1px solid #999;
-}
-
-button {
-  margin: 20px 0 0 124px;
-}
-
-label {
-position: relative;
+  height: 5rem;
 }
