--- a/styles.css
+++ b/styles.css
@@ -1,87 +1,205 @@
-body {
-  background-color: #fff;
-  color: #333;
-  font: 1em / 1.4 Helvetica Neue, Helvetica, Arial, sans-serif;
-  padding: 1em;
-  margin: 0;
-}
-
 * {
-  box-sizing: border-box;
-}
-
-button,
-input,
-select {
-  font-family: inherit;
-  font-size: 100%;
-  padding: 0; margin: 0;
-}
-
-fieldset {
-  padding: 10px 30px 0;
-  width: 400px;
-}
-
-legend {
-  color: white;
-  background: black;
-  padding: 5px 10px;
-}
-
-fieldset > div {
-  margin-bottom: 20px;
-  display: flex;
-  flex-flow: row wrap;
-}
-
-button, label, input {
-  display: block;
-  font-family: inherit;
-  font-size: 100%;
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  color: #5D6063;
+  background-color: #EAEDF0;
+  font-family: "Helvetica", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 1.3;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.speaker-form-header {
+  text-align: center;
+  background-color: #f6f7f8;
+  border: 1px solid #d6d9dc;
+  border-radius: 3px;
+
+  width: 80%;
+  margin: 40px 0;
+  padding: 50px;
+}
+
+.speaker-form-header h1 {
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.speaker-form {
+  background-color: #f6f7f8;
+  border: 1px solid #d6d9dc;
+  border-radius: 3px;
+
+  width: 80%;
+  padding: 50px;
+  margin: 0 0 40px 0;
+}
+
+.form-row {
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.form-row input[type='text'] {
+  background-color: #ffffff;
+  border: 1px solid #d6d9dc;
+  border-radius: 3px;
+  width: 100%;
+  padding: 7px;
+  font-size: 14px;
+}
+
+.form-row label {
+  margin-bottom: 15px;
+}
+
+.form-row input[type="text"] {
+  background-color: #ffffff;
+}
+
+.form-row input[type='text'],
+.form-row input[type='email'] {
+  background-color: #ffffff;
+}
+
+.form-row input[type='text']:invalid,
+.form-row input[type='email']:invalid {
+  border: 1px solid #d55c5f;
+  color: #d55c5f;
+  box-shadow: none;
+}
+
+.legacy-form-row {
+  border: none;
+  margin-bottom: 40px;
+}
+
+.legacy-form-row legend {
+  margin-bottom: 15px;
+}
+
+.legacy-form-row .radio-label {
+  display: block;
+  font-size: 14px;
+  padding: 0 20px 0 10px;
+}
+
+.legacy-form-row input[type="radio"] {
+  margin-top: 2px;
+}
+
+.legacy-form-row .radio-label,
+.legacy-form-row input[type='radio'] {
+  float: left;
+}
+
+.form-row select {
   width: 100%;
   padding: 5px;
-  height: 30px;
+  font-size: 14px;
+  -webkit-appearance: none;
 }
 
-input {
-  box-shadow: inset 1px 1px 3px #ccc;
-  border-radius: 5px;
+.form-row textarea  {
+  font-family: "Helvetica", "Arial", sans-serif;
+  font-size: 14px;
+
+  border: 1px solid #d6d9dc;
+  border-radius: 3px;
+
+  min-height: 200px;
+  margin-bottom: 10px;
+  padding: 7px;
+  resize: none;
 }
 
-input:hover, input:focus {
-  background-color: #eee;
+.form-row .instructions {
+  color: #999;
+  font-size: 14px;
+  margin-bottom: 30px;
 }
 
-button {
-  width: 60%;
-  margin: 0 auto;
+.form-row .checkbox-label {
+  margin-bottom: 0;
 }
 
-input[name="fname"]:empty {
-  outline: 3px solid red;
-  border-style: none;
+.form-row button {
+  font-size: 16px;
+  font-weight: bold;
+
+  color: #ffffff;
+  background-color: #5995da;
+
+  border: none;
+  border-radius: 3px;
+
+  padding: 10px 40px;
+  cursor: pointer;
 }
 
-input[name="fname"]:valid {
-  outline: 3px solid green;
-  border-style: none;
+.form-row button:hover {
+  background-color: #76aeed;
 }
 
-input[name="lname"]:empty {
-  outline: 3px solid red;
-  border-style: none;
+.form-row button:active {
+  background-color: #407fc7;
 }
 
-input[name="lname"]:valid {
-  outline: 3px solid green;
-  border-style: none;
-}
-
-input[id="email"]:valid {
-  outline: 3px solid green;
-  border-style: none;
+@media only screen and (min-width: 700px) {
+  .speaker-form-header, .speaker-form {
+    width: 600px;
+  }
+  .form-row {
+    flex-direction: row;
+    align-items: flex-start;
+    margin-bottom: 20px;
+  }
+  .form-row input[type='text'] {
+    width: 250px;
+    height: initial;
+  }
+  .form-row label {
+    text-align: right;
+    width: 120px;
+    margin-top: 7px;
+    padding-right: 20px;
+  }
+  .form-row input[type='text'],
+  .form-row input[type='email'],
+  .form-row select,
+  .form-row textarea {
+    width: 250px;
+    height: initial;
+  }
+  .legacy-form-row {
+    margin-bottom: 10px;
+  }
+  .legacy-form-row legend {
+    width: 120px;
+    text-align: right;
+    padding-right: right;
+  }
+  .legacy-form-row legend {
+    float: left;
+  }
+  .form-row .instructions {
+    margin-left: 120px;
+  }
+  .form-row .checkbox-label {
+    margin-left: 120px;
+    width: auto;
+  }
+  .form-row button {
+    margin-left: 120px;
+  }
 }
