Learn about the 'span' value for CSS Grid

--- a/style.css
+++ b/style.css
@@ -1,114 +1,10 @@
-@import url("https://fonts.googleapis.com/css?family=PT+Sans:400,700");
-form {
-  max-width: 450px;
-  margin: 0 auto;
-}
-form > div {
-  position: relative;
-  background: white;
-  border-bottom: 1px solid #ccc;
-}
-form > div > label {
-  opacity: 0.3;
-  font-weight: bold;
-  position: absolute;
-  top: 22px;
-  left: 20px;
-}
-form > div > input[type=text],
-form > div > input[type=email],
-form > div > input[type=password] {
-  width: 100%;
-  border: 0;
-  padding: 20px 20px 20px 50px;
-  background-color: #eee;
-}
-form > div > input[type=text]:focus,
-form > div > input[type=email]:focus,
-form > div > input[type=password]:focus {
-  outline: 0;
-  background: white;
-}
-form > div > input[type=text]:focus + label,
-form > div > input[type=email]:focus + label,
-form > div > input[type=password]:focus + label {
-  opacity: 0;
-}
-form > div > input[type=text]:valid,
-form > div > input[type=email]:valid,
-form > div > input[type=password]:valid {
-  background: url("800px-Sign-check-icon.png");
-  background-size: 20px;
-  background-repeat: no-repeat;
-  background-position: 20px 20px;
-}
-form > div > input[type=text]:valid + label,
-form > div > input[type=email]:valid + label,
-form > div > input[type=password]:valid + label {
-  opacity: 0;
-}
-form > div > input[type=text]:invalid:not(:focus):not(:-moz-placeholder-shown), form > div > input[type=email]:invalid:not(:focus):not(:-moz-placeholder-shown), form > div > input[type=password]:invalid:not(:focus):not(:-moz-placeholder-shown) {
-  background: pink;
-}
-form > div > input[type=text]:invalid:not(:focus):not(:-ms-input-placeholder), form > div > input[type=email]:invalid:not(:focus):not(:-ms-input-placeholder), form > div > input[type=password]:invalid:not(:focus):not(:-ms-input-placeholder) {
-  background: pink;
-}
-form > div > input[type=text]:invalid:not(:focus):not(:placeholder-shown),
-form > div > input[type=email]:invalid:not(:focus):not(:placeholder-shown),
-form > div > input[type=password]:invalid:not(:focus):not(:placeholder-shown) {
-  background: pink;
-}
-form > div > input[type=text]:invalid:not(:focus):not(:-moz-placeholder-shown) + label, form > div > input[type=email]:invalid:not(:focus):not(:-moz-placeholder-shown) + label, form > div > input[type=password]:invalid:not(:focus):not(:-moz-placeholder-shown) + label {
-  opacity: 0;
-}
-form > div > input[type=text]:invalid:not(:focus):not(:-ms-input-placeholder) + label, form > div > input[type=email]:invalid:not(:focus):not(:-ms-input-placeholder) + label, form > div > input[type=password]:invalid:not(:focus):not(:-ms-input-placeholder) + label {
-  opacity: 0;
-}
-form > div > input[type=text]:invalid:not(:focus):not(:placeholder-shown) + label,
-form > div > input[type=email]:invalid:not(:focus):not(:placeholder-shown) + label,
-form > div > input[type=password]:invalid:not(:focus):not(:placeholder-shown) + label {
-  opacity: 0;
-}
-form > div > input[type=text]:invalid:focus:not(:-moz-placeholder-shown) ~ .requirements, form > div > input[type=email]:invalid:focus:not(:-moz-placeholder-shown) ~ .requirements, form > div > input[type=password]:invalid:focus:not(:-moz-placeholder-shown) ~ .requirements {
-  max-height: 200px;
-  padding: 0 30px 20px 50px;
-}
-form > div > input[type=text]:invalid:focus:not(:-ms-input-placeholder) ~ .requirements, form > div > input[type=email]:invalid:focus:not(:-ms-input-placeholder) ~ .requirements, form > div > input[type=password]:invalid:focus:not(:-ms-input-placeholder) ~ .requirements {
-  max-height: 200px;
-  padding: 0 30px 20px 50px;
-}
-form > div > input[type=text]:invalid:focus:not(:placeholder-shown) ~ .requirements,
-form > div > input[type=email]:invalid:focus:not(:placeholder-shown) ~ .requirements,
-form > div > input[type=password]:invalid:focus:not(:placeholder-shown) ~ .requirements {
-  max-height: 200px;
-  padding: 0 30px 20px 50px;
-}
-form > div .requirements {
-  padding: 0 30px 0 50px;
-  color: #999;
-  max-height: 0;
-  transition: 0.28s;
-  overflow: hidden;
-  color: red;
-  font-style: italic;
-}
-form input[type=submit] {
-  display: block;
-  width: 100%;
-  margin: 20px 0;
-  background: #41d873;
-  color: white;
-  border: 0;
-  padding: 20px;
-  font-size: 1.2rem;
+.grid {
+  display: grid;
+  grid-template-columns: 1fr auto minmax(100px, 1fr) 1fr;
+  grid-template-rows: 100px repeat(3, auto) 100px;
+  grid-gap: 10px;
 }
 
-body {
-  background: #333;
-  font-family: "PT Sans", sans-serif;
-  padding: 20px;
-}
-
-* {
-  box-sizing: border-box;
+.grid > div {
+  background-color: red;
 }/*# sourceMappingURL=style.css.map */
