--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,41 @@
-.wrapper {
+.container {
   display: grid;
-  grid-template: repeat(3, 100px) / repeat(3, 1fr);
-  gap: 1em 20px;
-  background-color: lightblue;
+  gap: 15px 15px;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  background-color: black;
+  height: 95vh;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
 }
 
-.box1 {
-  grid-column-start: 1;
-  grid-row-start: 1;
-  grid-row-end: span 3;
+.container>div {
+  border-radius: 0.25rem;
+  border: 2px solid peachpuff;
+}
+
+.header {
+  grid-column: 1/3;
+  grid-row: 1/2;
   background-color: red;
 }
-.box2 {
-  grid-column: 3;
-  grid-row: 1/span 2;
+.side {
+  grid-column: 1/2;
+  grid-row: 2/-2;
   background-color: blue;
 }
-.box3 {
-  grid-column: 2;
-  grid-row: 1;
+.nav {
+  grid-column: 2/3;
+  grid-row: 2/3;
   background-color: green;
 }
-.box4 {
-  grid-column: 2/span 2;
-  grid-row: 3;
+.art {
+  grid-column: 2/3;
+  grid-row: 3/-2;
   background-color: purple;
+}
+.foot {
+  grid-column: 1/3;
+  grid-row: -2/-1;
+  background-color: orange;
 }
