Complete practice question for YDKJS Up and Going CH 1

--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
-.grid {
-  display: grid;
-  grid-template-columns: 1fr auto minmax(100px, 1fr) 1fr;
-  grid-template-rows: 100px repeat(3, auto) 100px;
-  grid-gap: 10px;
+.layout {
+  display: flex;
+  justify-content: space-around;
+  font-size: 2.25rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.grid > div {
-  background-color: red;
+.child {
+  width: 200px;
+  height: 200px;
+  background: orange;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  justify-items: center;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
