Check if a number is 'balanced'

--- a/style.css
+++ b/style.css
@@ -1,1 +1,24 @@
- 
+section#top-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+#first-name-title,
+#last-name-title,
+#email-title {
+  display: flex;
+  flex-direction: row;
+}
+#first-name-whole {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+#last-name-whole {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+#email-whole {
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
