--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ section#top-section {
 /* Middle Section */
 #terms-title {
   font-size: 0.9rem;
+  margin-top: 1.75rem;
 }
 #middle-terms {
   width: 38rem;
@@ -83,4 +84,20 @@ section#top-section {
 #signature-title {
   display: flex;
   flex-direction: row;
+  margin-top: 1.75rem;
+  font-size: 0.9rem;
+}
+#signature-star {
+  color: red;
+  margin-right: 0.5rem;
+}
+#initials {
+  width: 2rem;
+}
+input[type='button'] {
+  height: 1.5rem;
+  width: 10rem;
+}
+input[value='Submit'] {
+  margin-top: 1.25rem;
 }
